# Motivational-Meme-Generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: app.py  meme.py  tempCodeRunnerFile.py
src/MemeEngine/: __init__.py  meme_engine.py
src/QuoteEngine/: IngestorInterface.py  __init__.py  ingestor.py  ingestor_interface.py  quote_model.py
src/QuoteEngine/ingestors/: csv_ingestor.py  docx_ingestor.py  pdf_ingestor.py  txt_ingestor.py
src/_data/DogQuotes/: DogQuotesTXT.txt
src/templates/: base.html  meme.html
